helms/LA_grafana_30080.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: NodePort  # ← меняем на NodePort
  selector:
    app.kubernetes.io/name: grafana
  ports:
  - name: http
    port: 80
    targetPort: 3000
    nodePort: 30080  # порт на нодах (30000-32767)
    protocol: TCP
